--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
 	<div id="wrapper">
 
 		<header>
-			<img src= "java_house_image.png">
+			<img src= "image\java_house_image.png">
 		</header>
 
 		<div id="leftcolumn">
