--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>JavaJam Coffee House</title>
+<title>JavaJam  House</title>
 <meta charset=“utf-8”>
 <link rel="stylesheet" href="style.css">
 
