Case Study 4 Update
Init mysql with appropriate tables (javajam_prices, javajam_sales)

admin.php -> Updating product prices
admin2.php -> Generating sales docs
menu.php -> Displays prices queried from DB
sales1.php ->Revenue based on product category
sales2.php -> Revenue based on single/double shots

--- a/jobs.html
+++ b/jobs.html
@@ -18,6 +18,7 @@
           <a href="menu.html">Menu</a>
           <a href="music.html">Music</a>
           <a href="jobs.html">Jobs</a>
+          <a href="admin.php">Admin</a>
         </nav>
       </div>
 
