--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<a href="menu.html">Menu</a>
 			<a href="music.html">Music</a>
 			<a href="jobs.html">Jobs</a>
-			<a href="admin.php">Admin</a>
+			<a href="admin.php">Resources</a>
 			</nav>
 	</div>
 
